map entities messages